picdir = $(pkgdatadir)/animation/pics

MUNCHER_ANIM = \
	muncher__appearing_down_00.png \
	muncher__appearing_down_01.png \
	muncher__appearing_down_02.png \
	muncher__appearing_down_03.png \
	muncher__appearing_left_00.png \
	muncher__appearing_left_01.png \
	muncher__appearing_left_02.png \
	muncher__appearing_left_03.png \
	muncher__appearing_right_00.png \
	muncher__appearing_right_01.png \
	muncher__appearing_right_02.png \
	muncher__appearing_right_03.png \
	muncher__appearing_up_02.png \
	muncher__appearing_up_03.png \
	muncher__eating_down_01.png \
	muncher__eating_down_02.png \
	muncher__eating_left_00.png \
	muncher__eating_left_01.png \
	muncher__eating_left_02.png \
	muncher__eating_right_00.png \
	muncher__eating_right_01.png \
	muncher__eating_right_02.png \
	muncher__eating_up_01.png \
	muncher__eating_up_02.png \
	muncher__normal_down_00.png \
	muncher__normal_left_00.png \
	muncher__normal_right_00.png \
	muncher__normal_up_00.png \
	muncher__walking_down_00.png \
	muncher__walking_down_01.png \
	muncher__walking_down_03.png \
	muncher__walking_left_00.png \
	muncher__walking_left_01.png \
	muncher__walking_left_02.png \
	muncher__walking_left_03.png \
	muncher__walking_left_04.png \
	muncher__walking_left_05.png \
	muncher__walking_right_00.png \
	muncher__walking_right_01.png \
	muncher__walking_right_02.png \
	muncher__walking_right_03.png \
	muncher__walking_right_04.png \
	muncher__walking_right_05.png \
	muncher__walking_up_00.png \
	muncher__walking_up_01.png \
	muncher__walking_up_03.png

MUNCHER2_ANIM = \
	muncher2__appearing_down_00.png \
	muncher2__appearing_down_01.png \
	muncher2__appearing_down_02.png \
	muncher2__appearing_down_03.png \
	muncher2__appearing_left_00.png \
	muncher2__appearing_left_01.png \
	muncher2__appearing_left_02.png \
	muncher2__appearing_left_03.png \
	muncher2__appearing_right_00.png \
	muncher2__appearing_right_01.png \
	muncher2__appearing_right_02.png \
	muncher2__appearing_right_03.png \
	muncher2__appearing_up_02.png \
	muncher2__appearing_up_03.png \
	muncher2__eating_down_01.png \
	muncher2__eating_down_02.png \
	muncher2__eating_left_00.png \
	muncher2__eating_left_01.png \
	muncher2__eating_left_02.png \
	muncher2__eating_right_00.png \
	muncher2__eating_right_01.png \
	muncher2__eating_right_02.png \
	muncher2__eating_up_01.png \
	muncher2__eating_up_02.png \
	muncher2__normal_down_00.png \
	muncher2__normal_left_00.png \
	muncher2__normal_right_00.png \
	muncher2__normal_up_00.png \
	muncher2__walking_down_00.png \
	muncher2__walking_down_01.png \
	muncher2__walking_down_03.png \
	muncher2__walking_left_00.png \
	muncher2__walking_left_01.png \
	muncher2__walking_left_02.png \
	muncher2__walking_left_03.png \
	muncher2__walking_left_04.png \
	muncher2__walking_left_05.png \
	muncher2__walking_right_00.png \
	muncher2__walking_right_01.png \
	muncher2__walking_right_02.png \
	muncher2__walking_right_03.png \
	muncher2__walking_right_04.png \
	muncher2__walking_right_05.png \
	muncher2__walking_up_00.png \
	muncher2__walking_up_01.png \
	muncher2__walking_up_03.png

REGGIE_ANIM = \
	reggie__eating_down_01.png \
	reggie__eating_down_02.png \
	reggie__eating_left_01.png \
	reggie__eating_left_02.png \
	reggie__eating_right_01.png \
	reggie__eating_right_02.png \
	reggie__normal_down_00.png \
	reggie__normal_left_00.png \
	reggie__normal_right_00.png \
	reggie__normal_up_00.png \
	reggie__walking_down_01.png \
	reggie__walking_down_02.png \
	reggie__walking_down_05.png \
	reggie__walking_down_06.png \
	reggie__walking_left_00.png \
	reggie__walking_left_01.png \
	reggie__walking_left_02.png \
	reggie__walking_left_03.png \
	reggie__walking_right_00.png \
	reggie__walking_right_01.png \
	reggie__walking_right_02.png \
	reggie__walking_right_03.png \
	reggie__walking_up_01.png \
	reggie__walking_up_02.png \
	reggie__walking_up_05.png \
	reggie__walking_up_06.png

DIAPER_ANIM = \
	diaper__eating_down_01.png \
	diaper__eating_down_02.png \
	diaper__eating_left_01.png \
	diaper__eating_left_02.png \
	diaper__eating_right_01.png \
	diaper__eating_right_02.png \
	diaper__normal_down_00.png \
	diaper__normal_left_00.png \
	diaper__normal_right_00.png \
	diaper__normal_up_00.png \
	diaper__walking_down_01.png \
	diaper__walking_down_02.png \
	diaper__walking_down_05.png \
	diaper__walking_down_06.png \
	diaper__walking_left_00.png \
	diaper__walking_left_01.png \
	diaper__walking_left_02.png \
	diaper__walking_left_03.png \
	diaper__walking_right_00.png \
	diaper__walking_right_01.png \
	diaper__walking_right_02.png \
	diaper__walking_right_03.png \
	diaper__walking_up_01.png \
	diaper__walking_up_02.png \
	diaper__walking_up_05.png \
	diaper__walking_up_06.png

FRAIDY_ANIM = \
	fraidy__eating_down_01.png \
	fraidy__eating_down_02.png \
	fraidy__eating_left_01.png \
	fraidy__eating_left_02.png \
	fraidy__eating_right_01.png \
	fraidy__eating_right_02.png \
	fraidy__normal_down_00.png \
	fraidy__normal_left_00.png \
	fraidy__normal_right_00.png \
	fraidy__normal_up_00.png \
	fraidy__walking_down_01.png \
	fraidy__walking_down_02.png \
	fraidy__walking_down_05.png \
	fraidy__walking_down_06.png \
	fraidy__walking_left_01.png \
	fraidy__walking_left_02.png \
	fraidy__walking_left_05.png \
	fraidy__walking_left_06.png \
	fraidy__walking_right_01.png \
	fraidy__walking_right_02.png \
	fraidy__walking_right_05.png \
	fraidy__walking_right_06.png \
	fraidy__walking_up_01.png \
	fraidy__walking_up_02.png \
	fraidy__walking_up_05.png \
	fraidy__walking_up_06.png

SMARTY_ANIM = \
	smarty__eating_down_01.png \
	smarty__eating_down_02.png \
	smarty__eating_right_01.png \
	smarty__eating_right_02.png \
	smarty__eating_left_01.png \
	smarty__eating_left_02.png \
	smarty__normal_down_00.png \
	smarty__normal_down_01.png \
	smarty__normal_right_00.png \
	smarty__normal_right_01.png \
	smarty__normal_left_00.png \
	smarty__normal_left_01.png \
	smarty__normal_up_00.png \
	smarty__walking_down_01.png \
	smarty__walking_down_02.png \
	smarty__walking_down_05.png \
	smarty__walking_down_06.png \
	smarty__walking_right_01.png \
	smarty__walking_right_02.png \
	smarty__walking_right_05.png \
	smarty__walking_right_06.png \
	smarty__walking_left_01.png \
	smarty__walking_left_02.png \
	smarty__walking_left_05.png \
	smarty__walking_left_06.png \
	smarty__walking_up_01.png \
	smarty__walking_up_02.png \
	smarty__walking_up_05.png \
	smarty__walking_up_06.png

EATER_ANIM = \
	eater__eating_down_01.png \
	eater__eating_down_02.png \
	eater__eating_left_01.png \
	eater__eating_left_02.png \
	eater__eating_right_01.png \
	eater__eating_right_02.png \
	eater__normal_down_00.png \
	eater__normal_left_00.png \
	eater__normal_right_00.png \
	eater__normal_up_00.png \
	eater__walking_down_01.png \
	eater__walking_down_02.png \
	eater__walking_down_05.png \
	eater__walking_down_06.png \
	eater__walking_left_01.png \
	eater__walking_left_02.png \
	eater__walking_right_01.png \
	eater__walking_right_02.png \
	eater__walking_up_01.png \
	eater__walking_up_02.png \
	eater__walking_up_05.png \
	eater__walking_up_06.png

pic_DATA = *.png ${MUNCHER_ANIM} ${MUNCHER2_ANIM} ${REGGIE_ANIM} \
		 ${DIAPER_ANIM} ${FRAIDY_ANIM} ${SMARTY_ANIM} ${EATER_ANIM}
EXTRA_DIST = *.png

.svg.png:
	sh render_svg.sh $@
