noinst_LIBRARIES = libGnumchMenus.a

libGnumchMenus_a_SOURCES = \
	Menus.cpp Menus.h \
	MainMenu.cpp MainMenu.h \
	SinglePlayMenu.cpp SinglePlayMenu.h \
	MultiPlayMenu.cpp MultiPlayMenu.h \
	OptionsMenu.cpp OptionsMenu.h \
	CreditsMenu.cpp CreditsMenu.h \
	ScoresMenu.cpp ScoresMenu.h \
	InGameMenu.cpp InGameMenu.h

INCLUDES = -I.. -I../../gui
